iac/manifests/forward/ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kong-ingress
  namespace: api-gateway
  annotations:
    kubernetes.io/ingress.class: kong
spec:
  ingressClassName: kong
  tls:
  - hosts:
      - ames1118.iptime.org
    secretName: testsecret-tls
  rules:
  - host: ames1118.iptime.org
    http:
      paths:
      - path: /kong/manager
        pathType: Prefix
        backend:
          service:
            name: kong-kong-manager
            port:
              number: 8445
